Fix incorrect logging of CBD_TimePeriodChanged

When the Clear Browsing Data dialog is created, the timeperiod selector
is set to the last used value. Afterwards a listener is registered to
update a preference when this value changes and log a UserAction.
Due to an asynchronous event from setting the initial value, this action
is logged incorrectly when the dialog is created.
This CL fixes the issue by only logging if the value actually changes.

Bug: 760969
Change-Id: I8c9fe05873b15af59906c26caf75124701ac1708
Reviewed-on: https://chromium-review.googlesource.com/645850
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Commit-Queue: Christian Dullweber <dullweber@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499153}
Former-commit-id: 9bffaff96a165b6d7fe21e91e7e43a1db02eab56