chrome/browser/android/preferences/pref_service_bridge.cc
@@ -551,11 +551,14 @@ static void SetBrowsingDataDeletionTimePeriod(JNIEnv* env,
   DCHECK_GE(time_period, 0);
   DCHECK_LE(time_period,
             static_cast<int>(browsing_data::TimePeriod::TIME_PERIOD_LAST));
-  browsing_data::RecordTimePeriodChange(
-      static_cast<browsing_data::TimePeriod>(time_period));
-  GetPrefService()->SetInteger(browsing_data::GetTimePeriodPreferenceName(
-                                   ToTabEnum(clear_browsing_data_tab)),
-                               time_period);
+  const char* pref_name = browsing_data::GetTimePeriodPreferenceName(
+      ToTabEnum(clear_browsing_data_tab));
+  int previous_value = GetPrefService()->GetInteger(pref_name);
+  if (time_period != previous_value) {
+    browsing_data::RecordTimePeriodChange(
+        static_cast<browsing_data::TimePeriod>(time_period));
+    GetPrefService()->SetInteger(pref_name, time_period);
+  }
 }
 
 static jint GetLastClearBrowsingDataTab(JNIEnv* env,
